--- a/index.html
+++ b/index.html
@@ -3,6 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <title>Curriculo</title>
+
+    <style>
+
+      body {
+        text-align: center;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        background-color: azure;
+
+      }
+          
+      h1 {
+        background-color: aquamarine;
+        font-size: 50px;
+      }
+
+      h2 {
+        color: grey;
+        font-size: 25px;
+      }
+
+      ul {
+        font-size: 20px;
+      }
+
+      ol {
+        font-size: 20px;
+      }
+
+      p {
+        font-size: 20px;
+      }
+
+      .tiraPadding {
+        padding-left: 0px;
+      }
+
+    </style>
+
   </head>
   <body>
     <h1>
@@ -11,19 +49,18 @@
     </h1>
     <br /><br />
 
-    <h2>Índice</h2>
-    <br />
-    <ul>
+       <br />
+    <ul class="tiraPadding">
       <li><a href="#item1">Sobre mim</a></li>
-      <li><a href="#item2">Habilidade</a></li>
+      <li><a href="#item2">Habilidades desenvolvidas</a></li>
       <li><a href="#item3">Habilidades a aprender</a></li>
     </ul>
     <br /><br /><br /><br />
 
-    <img
+    <img style="border-radius: 50%;"
       src="https://scontent.fssz2-1.fna.fbcdn.net/v/t1.6435-9/73136854_2581201961969809_8587365166469873664_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=6rjS8rC6jAwAX-K5krR&_nc_ht=scontent.fssz2-1.fna&oh=00_AfDCve8t5_WijtLk7Uipma_0ZNUdpiE9FCF0GoWbpGUv7w&oe=6528E1DC"
       alt="Foto de Mariana tirada num restaurante japonês"
-      width="600px"
+      width="500px"
     /><br /><br /><br /><br />
 
     <h2 id="item1">Sobre mim</h2>
@@ -45,8 +82,8 @@
     </p>
     <br /><br /><br /><br />
 
-    <h2 id="item2">Habilidades</h2>
-    <ul>
+    <h2 id="item2">Habilidades desenvolvidas</h2>
+    <ul class="tiraPadding">
       <li>Terminal</li>
       <li>Unix</li>
       <li>Git</li>
@@ -59,7 +96,7 @@
     </ul>
 
     <h2 id="item3">Habilidades a aprender</h2>
-    <ol>
+    <ol class="tiraPadding">
       <li>Python</li>
       <li>Mobile</li>
       <li>SQL</li>
@@ -77,9 +114,9 @@
       <p>
         <b><i>Mariana Rosa - Turma 37 - GitHub</i></b>
       </p>
-    </a>
+    </a> 
 
-    <br /><br />
+    <!-- <br /><br />
     <a href="https://jovemnerd.com.br/" target="_blank">
       <img
         src="https://yt3.googleusercontent.com/ytc/AOPolaQ2br5Gh58dUDrAFr-FYEbgB0198OwIkHqdiPzi=s900-c-k-c0x00ffffff-no-rj"
@@ -87,6 +124,6 @@
         width="100px"
       />
       <p>Seja um jovem nerd!</p>
-    </a>
+    </a> -->
   </body>
 </html>
